martian-derive/tests/ui_make_mro/attr_on_trait.rs
use martian_derive::make_mro;

#[make_mro]
trait Foo {
    type Blah;
    fn bar();
}

fn main() {}
